objects/IS_System__c.object
<CustomObject>
    <fields>
        <fullName>Active_User_Assignment__c</fullName>
        <formula>IF(
  AND(
    OR(ISBLANK(BOA__c),BOA__r.IsActive),
    OR(ISBLANK(Business_Owner_User__c),Business_Owner_User__r.IsActive),
    OR(ISBLANK(IS_Operational_Owner__c),IS_Operational_Owner__r.Employee_User_Record__r.IsActive),
    OR(ISBLANK(IS_Support_Backup_User__c),IS_Support_Backup_User__r.IsActive),
    OR(ISBLANK(IS_Support_Primary_User__c),IS_Support_Primary_User__r.IsActive),
    OR(ISBLANK(Program_Manager__c),Program_Manager__r.IsActive),
    OR(ISBLANK(SME__c),SME__r.IsActive),
    OR(ISBLANK(Technical_Lead__c),Technical_Lead__r.IsActive)) = FALSE,
  IMAGE(&apos;/img/msg_icons/error16.png&apos;,&apos;Inactive&apos;) &amp; &apos; Inactive User Assigned&apos;,
  IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Active&apos;) &amp; &apos; All Active&apos;
)</formula>
        <inlineHelpText>Indicates if at least one of the assigned users is inactive</inlineHelpText>
        <label>Active User Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Production App URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BOA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Business Operations Analyst - Responsible for maintaining eTech&apos;s relationship with the departments in the firm</inlineHelpText>
        <label>BOA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Apps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Practices__c</fullName>
        <label>Best Practices</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person in the main department or firm who owns the business processes for this system</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Apps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzzBusiness Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IS Systems (zzzBusiness Owner)</relationshipLabel>
        <relationshipName>IS_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Location__c</fullName>
        <label>Code Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>zzzCurrent Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <label>Current Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality__c</fullName>
        <formula>IF(TODAY()-DATEVALUE(LastModifiedDate) &gt; 180,
  IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Over 180 Days old&quot;) &amp; &apos; Stale - Over 180 Days&apos;,
  IF(TODAY()-DATEVALUE(LastModifiedDate) &gt; 90,
    IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Over 90 Days old&quot;) &amp; &apos; Aging - Over 90 Days&apos;,
    IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Fresh Data!&quot;) &amp; &apos; Fresh - Within 90 Days&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates how recently the record has been updated</inlineHelpText>
        <label>Data Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IS_Dev_Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzzIS Dev Expert</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>IS_Systems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Operational_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eTech Operational Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IS Systems (IS Operational Owner)</relationshipLabel>
        <relationshipName>IS_Systems2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Support_Backup_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS Support - Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Apps4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Support_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzzIS Support - Backup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>IS_Systems4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Support_Primary_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS Support - Primary</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Apps5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Support_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzzIS Support - Primary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>IS_Systems3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instance_Name__c</fullName>
        <label>Instance Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Issues_Limitations__c</fullName>
        <label>Known Issues / Limitations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_L2_CR_Update__c</fullName>
        <inlineHelpText>Populated when a related L2 Change Request is marked as Deployed</inlineHelpText>
        <label>Last L2 CR Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_L3_Project_Update__c</fullName>
        <description>Populated when a related L3 project is marked as Deployed</description>
        <inlineHelpText>Populated when a related L3 project is marked as Deployed</inlineHelpText>
        <label>Last L3 Project Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Major_Upgrade__c</fullName>
        <inlineHelpText>Last upgrade involving a version change or other major change</inlineHelpText>
        <label>Last Major Upgrade</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <inlineHelpText>Last time this system had a substantial modification, not involving a version change.  Manually updated.</inlineHelpText>
        <label>Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Troubleshooting_Document__c</fullName>
        <description>Created for CR-20150316-8760. Field to hold link related to troubleshooting documents.</description>
        <label>Troubleshooting Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Out_of_Service_Date__c</fullName>
        <label>Out of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Platform_Vendor__c</fullName>
        <label>Platform / Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <label>Primary Department</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All - Firmwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Strategies and Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events and Member Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_System_Instance__c</fullName>
        <formula>Primary_System__r.Instance_Name__c</formula>
        <label>Parent System Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_System__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>System</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>IS Systems - Applications</relationshipLabel>
        <relationshipName>IS_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_App_Location__c</fullName>
        <label>Production App Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_App_URL__c</fullName>
        <label>Production App URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Production_DB_Location__c</fullName>
        <label>Production DB Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The eTech associate who is responsible for the changes and maintenance for the application or system.</inlineHelpText>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Apps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>zzzReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Subject Matter Expert - the eTech associate who is most knowledgeable about how the application or system is used within the firm</inlineHelpText>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <inlineHelpText>Abbreviated name for the system, used in name generation for other records</inlineHelpText>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Number__c</fullName>
        <description>Used in Process and Use Case Numbering scheme</description>
        <displayFormat>SA-{000}</displayFormat>
        <label>System Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Technical_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The eTech associate with the most technical knowledge about the application or system.</inlineHelpText>
        <label>Technical Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technologies_Langauge_s__c</fullName>
        <label>Technologies/Langauge(s)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_App_Location__c</fullName>
        <label>Test App Location(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_App_URL__c</fullName>
        <label>Test App URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_DB_Location__c</fullName>
        <label>Test DB Location(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Things_to_Test__c</fullName>
        <label>Things to Test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Troubleshooting_Documentation__c</fullName>
        <description>Created for CR-20150316-8760. Field to hold link related to troubleshooting documents.</description>
        <label>Troubleshooting Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zzzSupport_Documentation__c</fullName>
        <label>zzzSupport Documentation</label>
        <type>Url</type>
    </fields>
    <label>IS System</label>
    <listViews>
        <fullName>ACTIVE_DB_Info</fullName>
        <columns>NAME</columns>
        <columns>Technical_Lead__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Primary_System__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Test_App_Location__c</columns>
        <columns>Test_DB_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>ACTIVE - DB Info</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Apps</fullName>
        <columns>NAME</columns>
        <columns>Primary_System__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.Application</value>
        </filters>
        <label>All Apps</label>
    </listViews>
    <listViews>
        <fullName>All_Systems</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.System</value>
        </filters>
        <label>All Systems</label>
    </listViews>
    <listViews>
        <fullName>All_Systems_Apps_Not_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>IS_Operational_Owner__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>All Systems / Apps - Not Inactive</label>
    </listViews>
    <listViews>
        <fullName>Apps_Active</fullName>
        <columns>NAME</columns>
        <columns>Primary_System__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Active_User_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.Application</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>Apps_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Owner_User__c</columns>
        <columns>IS_Dev_Expert__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Operational_Owner__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>BOA__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Primary_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.Application</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Apps - Inactive</label>
    </listViews>
    <listViews>
        <fullName>Apps_Not_Retired</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.Application</value>
        </filters>
        <label>Apps - Not Retired</label>
    </listViews>
    <listViews>
        <fullName>Apps_Pilot</fullName>
        <columns>NAME</columns>
        <columns>Primary_System__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.Application</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pilot</value>
        </filters>
        <label>Apps - Pilot</label>
    </listViews>
    <listViews>
        <fullName>Platform_Not_Retired</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>IS_Operational_Owner__c</columns>
        <columns>IS_Dev_Expert__c</columns>
        <columns>IS_Support_Primary__c</columns>
        <columns>IS_Support_Backup__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Status__c</field>
            <operation>notEqual</operation>
            <value>RETIRED</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Platform</value>
        </filters>
        <label>Platform - Not Retired</label>
    </listViews>
    <listViews>
        <fullName>Systems_Active</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.System</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Systems - Active</label>
    </listViews>
    <listViews>
        <fullName>Systems_All</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Active_User_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.System</value>
        </filters>
        <label>Systems - All</label>
    </listViews>
    <listViews>
        <fullName>Systems_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Owner_User__c</columns>
        <columns>IS_Dev_Expert__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Operational_Owner__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>BOA__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Primary_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.System</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Systems - Inactive</label>
    </listViews>
    <listViews>
        <fullName>Systems_Not_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Platform_Vendor__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Primary_Department__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Production_App_Location__c</columns>
        <columns>IS_Operational_Owner__c</columns>
        <columns>Application_URL__c</columns>
        <columns>Production_DB_Location__c</columns>
        <columns>Primary_System__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.System</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>Systems - Not Inactive</label>
    </listViews>
    <listViews>
        <fullName>Systems_Upgraded_Last_6_Months</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>IS_Support_Primary_User__c</columns>
        <columns>IS_Support_Backup_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_System__c.System</value>
        </filters>
        <filters>
            <field>Last_Major_Upgrade__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Systems - Upgraded Last 6 Months</label>
    </listViews>
    <nameField>
        <label>IS System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IS Systems</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <description>A local or hosted application such as Workday, or a set of processes used together, such as Boardroom</description>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <description>A system or platform, which hosts one or more apps or services</description>
        <label>System</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>In_Service_Date_must_be_greater_than_Out</fullName>
        <active>true</active>
        <description>The In Service Date field should be greater than the Out of Service Date field.</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;System&apos;,
Out_of_Service_Date__c &lt; In_Service_Date__c
)</errorConditionFormula>
        <errorMessage>The In Service Date must be earlier than the Out of Service Date value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Out_of_Service_Date_Required</fullName>
        <active>true</active>
        <description>Out Of Service Date is required when Status = Inactive</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Status__c,&apos;Inactive&apos;),ISPICKVAL(Status__c,&apos;Retired&apos;)),ISBLANK( Out_of_Service_Date__c ))</errorConditionFormula>
        <errorDisplayField>Out_of_Service_Date__c</errorDisplayField>
        <errorMessage>Out of Service Date is required when Status = Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Parent_System</fullName>
        <active>false</active>
        <description>Parent System must be specified if the type is Application or Service</description>
        <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Type__c,&apos;Application&apos;),
    ISPICKVAL(Type__c,&apos;Service&apos;)),
  ISBLANK(Primary_System__c),
  RecordType.Name = &apos;Application&apos;)</errorConditionFormula>
        <errorDisplayField>Primary_System__c</errorDisplayField>
        <errorMessage>Parent System must be specified for the selected Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason_for_Dependency</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISBLANK( Reason__c ) ,
 NOT( ISBLANK( Primary_System__c ) ) 
)</errorConditionFormula>
        <errorMessage>You must enter the Reason for the dependency.</errorMessage>
    </validationRules>
</CustomObject>